--- a/portfolio/templates/portfolio/layout.html
+++ b/portfolio/templates/portfolio/layout.html
@@ -20,7 +20,7 @@
 		    <a class="nav-link" href="{% url 'portfolio-about' %}">About</a>
 		  </li>
 		</ul>
-	<hr></hr>
+	<hr style="margin-bottom: 75px">
 	{% block content %}
 	{% endblock %}
 	</div>
