--- a/portfolio/templates/portfolio/about.html
+++ b/portfolio/templates/portfolio/about.html
@@ -1,5 +1,22 @@
 {% extends 'portfolio/layout.html' %}
 
 {% block content%}
-	<h1>About this page	</h1>
+	<div class="row">
+    <div class="col-2">
+    </div>
+    <div class="col-8" ">
+    	<div class="row">
+    	 <div class="col6" ">
+    	 	<img src="https://media.licdn.com/dms/image/C4D03AQGwYydSLi71Zw/profile-displayphoto-shrink_200_200/0?e=1552521600&v=beta&t=jhu6pL7Ydkhi70ROFPYhmMVsSdxD_VCQuDzTgLzXVec" style="border-radius: 5%">
+    	 </div>
+    	 <div class="col-6" ">
+    	 	<p>Andre Fagereng</p>
+    		<p>27</p>
+    		<p>Interests: Python, Machine Learning, Network Security</p>
+    	 </div>
+    	</div>
+    </div>
+    <div class="col-2" "></div>
+  </div>
 {% endblock %}
+
