--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -8,7 +8,7 @@
   <div class="span12">
     <div class="row">
       <div class="span8">
-        <h4><strong>{{item.name}}</strong></h4>
+        <h4 style="margin-left: 20px"><strong>{{item.name}}</strong></h4>
       </div>
     </div>
     <div class="row">
@@ -18,13 +18,13 @@
         </a>
       </div>
       <div class="span10">      
-        <p>{{item.description}}</p>
+        <p style="margin-top: 5rem">{{item.description}}</p>
       </div>
     </div>
     <div class="row">
       <div class="span8">
         <p></p>
-        <p>
+        <p style="margin-left: 20px">
           <i class="icon-user"></i> by <a href="{% url 'portfolio-about'%}">Andre</a> 
           <i class="icon-tags"></i> Tags : 
           <span class="badge badge-pill badge-danger">{{item.language}}</span>
